<resources>
    <string name="app_name">Bookie</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="book_cover">Book cover</string>
    <string name="bookmark">Bookmark</string>
    <string name="back">Back</string>
    <string name="pages">%1$d pages</string>
    <string name="profile">Profile</string>
    <string name="profile_subtitle">Manage your Bookie experience</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
</resources>
